# thesis-latex-templates

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: update.yml
data/: repos.json
docs/superpowers/plans/: 2026-06-07-chinese-thesis-tracker.md
docs/superpowers/specs/: 2026-06-07-chinese-thesis-tracker-design.md
output/: README.md
output/universities/: 上海交通大学.md  上海大学.md  上海对外经贸大学.md  上海师范大学.md  上海理工大学.md  上海第二工业大学.md  东北大学.md  东南大学.md  中南大学.md  中国人民大学.md  中国农业大学.md  中国海洋大学.md  中国石油大学(华东).md  中国矿业大学(北京).md  中国科学技术大学.md  中国科学院大学.md  中央财经大学.md  中山大学.md  云南大学.md  兰州大学.md  兰州理工大学.md  北京交通大学.md  北京化工大学.md  北京大学.md  北京工业大学.md  北京林业大学.md  北京理工大学.md  北京科技大学.md  北京航空航天大学.md  北京语言大学.md  北京邮电大学.md  北方民族大学.md  华东师范大学.md  华东理工大学.md  华中科技大学.md  华南师范大学.md  华南理工大学.md  南京信息工程大学.md  南京农业大学.md  南京大学.md  (+62 more)
tests/: test_discover.py  test_fetcher.py  test_generator.py  test_main.py  test_models.py
tracker/: __init__.py  discover.py  fetcher.py  generator.py  main.py  models.py
