[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-tracker"
version = "0.1.0"
description = "Track Chinese university LaTeX thesis templates on GitHub"
requires-python = ">=3.10"
dependencies = [
    "PyGithub>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
